# apyt

./: .gitignore  README.md  paper.bib  paper.md  pyproject.toml
apyt/: __init__.py  conv.py  locomp.py  massfit.py  massspec.py  reconstruction.py  sdm.py
apyt/analysis/: __init__.py  spectrum.py
apyt/analysis/chemistry/: __init__.py  locomp.py
apyt/analysis/crystallography/: __init__.py  sdm.py
apyt/gui/: __init__.py  forms.py
apyt/io/: __init__.py  config.py  conv.py  localdb.py  sql.py
apyt/reconstruction/: __init__.py  basic.py  non_spherical.py
apyt/spectrum/: __init__.py  align.py  fit.py
apyt_cli/: reconstruction.py  spectrum_align.py  spectrum_fit.py
data/: apyt_W_calibration_tap_01_trimmed.raw
doc/: build.sh
doc/source/: apyt.analysis.chemistry.locomp.rst  apyt.analysis.chemistry.rst  apyt.analysis.crystallography.rst  apyt.analysis.crystallography.sdm.rst  apyt.analysis.rst  apyt.analysis.spectrum.rst  apyt.gui.forms.rst  apyt.gui.rst  apyt.io.config.rst  apyt.io.conv.rst  apyt.io.localdb.rst  apyt.io.rst  apyt.io.sql.rst  apyt.reconstruction.basic.rst  apyt.reconstruction.non_spherical.rst  apyt.reconstruction.rst  apyt.rst  apyt.spectrum.align.rst  apyt.spectrum.fit.rst  apyt.spectrum.rst  apyt_cli.reconstruction.rst  apyt_cli.rst  apyt_cli.spectrum_align.rst  apyt_cli.spectrum_fit.rst  comparison.rst  conf.py  example.rst  index.rst  installation.rst  release.rst  source.rst
requirements/: requirements.txt  requirements_doc.txt
scripts/: apyt_reconstruction.py  apyt_spectrum_align.py  apyt_spectrum_fit.py
tools/: build.sh  build_package.sh
