[build-system]
requires = ["hatchling >= 1.26", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "apyt"
version = "0.1.0.dev3"
authors = [
  { name  = "Sebastian M. Eich", email = "Sebastian.Eich@imw.uni-stuttgart.de" }
]
description = """APyT is a Python package which provides modules for the
evaluation of atom probe tomography (APT) data."""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["dependencies"]

[project.urls]
Homepage      = "https://apyt.mp.imw.uni-stuttgart.de/"
Documentation = "https://apyt.mp.imw.uni-stuttgart.de/"
Changelog     = "https://apyt.mp.imw.uni-stuttgart.de/release.html"
Repository    = "https://github.com/sebi-85/apyt"
Issues        = "https://github.com/sebi-85/apyt/issues"

[tool.hatch.build.targets.sdist]
include = [
  "apyt/",
  "apyt_cli/",
  "data/apyt_W_calibration_tap_01_trimmed.raw",
  "doc/",
  "requirements/",
  "scripts/"
]

[tool.hatch.build.targets.wheel]
include = [
  "apyt/",
  "apyt_cli/",
  "data/apyt_W_calibration_tap_01_trimmed.raw",
  "scripts/"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/requirements.txt"]

[project.scripts]
apyt_reconstruction = "scripts.apyt_reconstruction:main"
apyt_spectrum_align = "scripts.apyt_spectrum_align:main"
apyt_spectrum_fit   = "scripts.apyt_spectrum_fit:main"
